--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <title> Biblioteca Start </title>
+  <link rel="stylesheet" href="reset.css">
+<link rel ="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Vai ser uma imagem aqui</h1>
-    <ul>
-        <li>Página Inicial</li>
-        <li>Atrações</li>
-        <li>Fotos</li>
-    </ul>
+
+   <header class="cabecalho">
+    <span class="cabecalho__menu-hamburger">
+    </span>
+    <img src="IMG/Logo.svg" alt="logotipo da biblioteca">
+    <img src="IMG/Favoritos.svg" alt="meus favoritos">
+    <img src="IMG/Emprestimos.svg" alt=" meusempréstimos">
+    <img src="IMG/Usuario.svg" alt="meu perfil">
+    
+
+</header>
+    
 </body>
 </html>
